syntax = "proto3";

package rewards_calculator.pb.v1;

import "ic_base_types/pb/v1/types.proto";
import "ic_nervous_system/pb/v1/nervous_system.proto";

message DayUtc {
  optional uint64 value = 1;
}

message NodeMetricsDaily {
  ic_base_types.pb.v1.PrincipalId subnet_assigned = 1;
  ic_nervous_system.pb.v1.Decimal subnet_assigned_fr_percent = 2;
  optional uint64 num_blocks_proposed = 3;
  optional uint64 num_blocks_failed = 4;
  ic_nervous_system.pb.v1.Decimal original_fr_percent = 5;
  ic_nervous_system.pb.v1.Decimal relative_fr_percent = 6;
}

message Assigned {
  optional NodeMetricsDaily node_metrics = 1;
}

message Unassigned {
  ic_nervous_system.pb.v1.Decimal extrapolated_fr_percent = 1;
}

message NodeStatus {
  oneof status {
    Assigned assigned = 1;
    Unassigned unassigned = 2;
  }
}

message DailyResults {
  DayUtc day = 1;
  optional NodeStatus node_status = 2;
  ic_nervous_system.pb.v1.Decimal performance_multiplier_percent = 3;
  ic_nervous_system.pb.v1.Decimal rewards_reduction_percent = 4;
  ic_nervous_system.pb.v1.Decimal base_rewards_xdr_permyriad = 5;
  ic_nervous_system.pb.v1.Decimal adjusted_rewards_xdr_permyriad = 6;
}

message NodeResults {
  ic_base_types.pb.v1.PrincipalId node_id = 1;
  optional string node_reward_type = 2;
  optional string region = 3;
  optional string dc_id = 4;
  repeated DailyResults daily_results = 5;
}

message NodeProviderRewards {
  ic_nervous_system.pb.v1.Decimal rewards_total_xdr_permyriad = 1;
  optional string computation_log = 2;
  repeated NodeResults nodes_results = 3;
}

message NodeProviderRewardsKey {
  ic_base_types.pb.v1.PrincipalId principal_id = 1;
  DayUtc rewards_distribution_day = 2;
}

message SubnetsFailureRateValue {
   ic_nervous_system.pb.v1.Decimal subnet_fr_percent = 1;
}

message SubnetsFailureRateKey {
   DayUtc day = 1;
   ic_base_types.pb.v1.PrincipalId subnet_id = 2;
}
